# opencv

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fftools/myapplication/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  detect_face.cpp
app/src/main/java/com/fftools/myapplication/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/fftools/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
